Typo fixed in ini file

--- a/MORSE-find-human/hri-morse-find-scenario.ini
+++ b/MORSE-find-human/hri-morse-find-scenario.ini
@@ -69,5 +69,5 @@ name = HRI-Experiment-1
 namespace = http://my_namespace.com
 run_order = ('roscore','morse','start_robot','log_human_pose'),
 run_execution_duration = 60
-result_assessment_order = ('assess_human_log',''),
+result_assessment_order = ('assess_human_log',),
 result_assessment_execution_duration = 15
