--- a/MORSE-find-human/hri-morse-find-scenario.ini
+++ b/MORSE-find-human/hri-morse-find-scenario.ini
@@ -1,6 +1,6 @@
 [environment]
-# You may need to change your "prefix"
-prefix = /media/FSM-Lab/releases/precise/x64/
+# You may need to change your "prefix" and "script_path"
+prefix = /vol/isy/current/releases/precise/
 script_path = /homes/flier/Projects/Ongoing/HRI-Experiment/fsmt_experiments/MORSE-find-human/
 release_prefix = /media/FSM-Lab/releases/precise/x64/
 
