--- a/MORSE-find-human/hri-morse-find-scenario.ini
+++ b/MORSE-find-human/hri-morse-find-scenario.ini
@@ -23,7 +23,7 @@ path = $prefix/bin/
 execution_host = localhost
 check_execution = True
 check_type = stdout,pid
-timeout = 10,2
+timeout = 20,2
 blocking = True,True
 ongoing = False,True
 criteria = [SCENE INITIALIZED],
@@ -37,7 +37,7 @@ check_execution = True
 check_type = pid
 timeout = 1
 blocking = True
-ongoing = True
+ongoing = False
 criteria =
 
 [component-4]
@@ -49,7 +49,7 @@ check_execution = True
 check_type = pid 
 timeout = 1  
 blocking = True     
-ongoing = True     
+ongoing = False    
 criteria =
 
 [component-5]
@@ -61,13 +61,13 @@ check_execution = True
 check_type = pid
 timeout = 1
 blocking = True
-ongoing = True
+ongoing = False
 criteria =
 
 [run]
 name = HRI-Experiment-1
 namespace = http://my_namespace.com
 run_order = ('roscore','morse','start_robot','log_human_pose'),
-run_execution_duration = 60
+run_execution_duration = 20
 result_assessment_order = ('assess_human_log',),
-result_assessment_execution_duration = 15
+result_assessment_execution_duration = 5
