human service does not work

--- a/MORSE-find-human/hri-morse-find-scenario.ini
+++ b/MORSE-find-human/hri-morse-find-scenario.ini
@@ -53,6 +53,18 @@ ongoing = False
 criteria =
 
 [component-5]
+name = start_human
+command = python2.7 $script_path/hri-start-human.py
+path = /usr/bin/
+execution_host = localhost
+check_execution = True
+check_type = pid
+timeout = 1
+blocking = True
+ongoing = False
+criteria =
+
+[component-6]
 name = assess_human_log
 command = gedit $script_path/hri-human-pos.csv
 path = /usr/bin/
@@ -67,7 +79,7 @@ criteria =
 [run]
 name = HRI-Experiment-1
 namespace = http://my_namespace.com
-run_order = ('roscore','morse','start_robot','log_human_pose'),
+run_order = ('roscore','morse','start_robot','log_human_pose','start_human'),
 run_execution_duration = 20
 result_assessment_order = ('assess_human_log',),
 result_assessment_execution_duration = 5
