working now, need data

--- a/MORSE-find-human/hri-morse-find-scenario.ini
+++ b/MORSE-find-human/hri-morse-find-scenario.ini
@@ -30,7 +30,7 @@ criteria = [SCENE INITIALIZED],
 
 [component-3]
 name = start_robot
-command = python2.7 $script_path/hri-start-robot.py
+command = python2.7 $script_path/hri-start-robot-ros.py
 path = /usr/bin/
 execution_host = localhost
 check_execution = True
@@ -54,8 +54,8 @@ criteria =
 
 [component-5]
 name = start_human
-command = python2.7 $script_path/hri-start-human-waypoint.py
-path = /usr/bin/
+command = python3.3 $script_path/hri-start-human-waypoint.py
+path = $prefix/bin/
 execution_host = localhost
 check_execution = True
 check_type = pid
