--- a/MORSE-find-human/hri-morse-find-scenario.ini
+++ b/MORSE-find-human/hri-morse-find-scenario.ini
@@ -1,8 +1,10 @@
 [environment]
 # You may need to change your "prefix" and "script_path"
-prefix = /media/FSM-Lab/releases/precise/x64/
-script_path = /homes/flier/Projects/Ongoing/HRI-Experiment/fsmt_experiments/MORSE-find-human/
-release_prefix = /media/FSM-Lab/releases/precise/x64/
+prefix = /vol/morse/
+script_path = /vol/morse/fsmt_experiments/MORSE-find-human/
+release_prefix = /vol/morse/
+MORSE_ROOT = /vol/morse/
+MORSE_BLENDER = /vol/morse/opt/blender/blender
 
 [component-1]
 name = roscore 
