added image view and free scenario which is buggy

--- a/MORSE-find-human/hri-morse-find-scenario-free.ini
+++ b/MORSE-find-human/hri-morse-find-scenario-free.ini
@@ -20,7 +20,7 @@ criteria = started core service [/rosout],
 
 [component-2]
 name = morse
-command = morse run $script_path/hri-morse-find-scenario.py
+command = morse run $script_path/hri-morse-find-scenario-free.py
 path = $prefix/bin/
 execution_host = localhost
 check_execution = True
@@ -93,7 +93,7 @@ criteria =
 [run]
 name = HRI-Experiment-1
 namespace = http://my_namespace.com
-run_order = ('roscore','morse','start_robot', 'image_view', 'log_human_pose','start_human'),
+run_order = ('roscore','morse','start_robot', 'image_view', 'log_human_pose'),
 run_execution_duration = 80
 result_assessment_order = ('assess_human_log',),
 result_assessment_execution_duration = 5
