--- a/MORSE-find-human/hri-morse-find-scenario.ini
+++ b/MORSE-find-human/hri-morse-find-scenario.ini
@@ -79,8 +79,20 @@ ongoing = False
 criteria =
 
 [component-7]
+name = clean_logs
+command = sh $script_path/cleanlogs.sh /tmp/$USER/fsmtesting/$FSMTRA/logs/log_human_pose.log
+path = /bin/
+execution_host = localhost
+check_execution = True
+check_type = pid
+timeout = 1
+blocking = True
+ongoing = False
+criteria =
+
+[component-8]
 name = assess_human_log
-command = gedit $script_path/hri-human-pos-example.csv
+command = gedit /tmp/$USER/fsmtesting/$FSMTRA/logs/log_human_pose.log
 path = /usr/bin/
 execution_host = localhost
 check_execution = True
@@ -93,7 +105,7 @@ criteria =
 [run]
 name = HRI-Experiment-1
 namespace = http://my_namespace.com
-run_order = ('roscore','morse','start_robot', 'image_view', 'log_human_pose','start_human'),
-run_execution_duration = 80
-result_assessment_order = ('assess_human_log',),
-result_assessment_execution_duration = 5
+run_order = ('roscore', 'morse', 'image_view', 'log_human_pose','start_human', 'start_robot'),
+run_execution_duration = 30
+result_assessment_order = ('clean_logs', 'assess_human_log'),
+result_assessment_execution_duration = 10
