--- a/MORSE-find-human/hri-morse-find-scenario.ini
+++ b/MORSE-find-human/hri-morse-find-scenario.ini
@@ -102,10 +102,22 @@ blocking = True
 ongoing = False
 criteria =
 
+[component-9]
+name = plot_path
+command = sh $script_path/gplot.sh /tmp/$USER/fsmtesting/$FSMTRA/logs/log_human_pose.log x
+path = /bin/
+execution_host = localhost
+check_execution = True
+check_type = pid
+timeout = 1
+blocking = True
+ongoing = False
+criteria =
+
 [run]
 name = HRI-Experiment-1
 namespace = http://my_namespace.com
 run_order = ('roscore', 'morse', 'image_view', 'log_human_pose','start_human', 'start_robot'),
 run_execution_duration = 30
-result_assessment_order = ('clean_logs', 'assess_human_log'),
+result_assessment_order = ('clean_logs', 'assess_human_log', 'plot_path'),
 result_assessment_execution_duration = 10
