here we go, beta

--- a/MORSE-find-human/hri-morse-find-scenario.ini
+++ b/MORSE-find-human/hri-morse-find-scenario.ini
@@ -116,8 +116,8 @@ criteria =
 
 [component-10]
 name = plot_display
-command = /tmp/$USER/fsmtesting/$FSMTRA/logs/log_human_pose.log.png
-path = /usr/bin/display/
+command = eog /tmp/$USER/fsmtesting/$FSMTRA/logs/log_human_pose.log.png
+path = /usr/bin/
 execution_host = localhost
 check_execution = True
 check_type = pid
@@ -130,6 +130,6 @@ criteria =
 name = HRI-Experiment-1
 namespace = http://my_namespace.com
 run_order = ('roscore', 'morse', 'image_view', 'log_human_pose','start_human', 'start_robot'),
-run_execution_duration = 30
+run_execution_duration = 20
 result_assessment_order = ('clean_logs', 'assess_human_log', 'plot_path', 'plot_display'),
-result_assessment_execution_duration = 10
+result_assessment_execution_duration = 5
