--- a/MORSE-find-human/hri-morse-find-scenario.ini
+++ b/MORSE-find-human/hri-morse-find-scenario.ini
@@ -1,10 +1,10 @@
 [environment]
 # You may need to change your "prefix" and "script_path"
-prefix = /vol/morse/
-script_path = /vol/morse/fsmt_experiments/MORSE-find-human/
-release_prefix = /vol/morse/
-MORSE_ROOT = /vol/morse/
-MORSE_BLENDER = /vol/morse/opt/blender/blender
+prefix = /opt/fsmt-experiments
+script_path = /opt/fsmt-experiments/MORSE-find-human/
+release_prefix = /opt/fsmt-experiments
+MORSE_ROOT = /opt/fsmt-experiments
+MORSE_BLENDER = /opt/fsmt-experiments/opt/blender/blender
 
 [component-1]
 name = roscore 
