better graph description

--- a/MORSE-find-human/hri-morse-find-scenario.ini
+++ b/MORSE-find-human/hri-morse-find-scenario.ini
@@ -104,7 +104,7 @@ criteria =
 
 [component-9]
 name = plot_path
-command = sh $script_path/gplot.sh /tmp/$USER/fsmtesting/$FSMTRA/logs/log_human_pose.log x
+command = sh $script_path/gplot.sh /tmp/$USER/fsmtesting/$FSMTRA/logs/log_human_pose.log Human_Position x
 path = /bin/
 execution_host = localhost
 check_execution = True
